--- a/styles.css
+++ b/styles.css
@@ -5,3 +5,11 @@
   padding: 0;
   font-family: "Open Sans", sans-serif;
 }
+
+body {
+  height: 100vh;
+  background: #2d3250;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
