--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,14 @@ body {
   align-items: center;
   justify-content: center;
 }
+
+.container {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  height: 200px;
+  width: 550px;
+  background: linear-gradient(120deg, #f5e8c7, #f6b17a);
+  border-radius: 10px;
+  box-shadow: 0px 8px 10px rgb(0, 0, 0, 0.5);
+}
