--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* Digital Clock Project*/
+/* Digital Clock Project */
 
 * {
   margin: 0;
@@ -12,30 +12,51 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  margin: 0;
+  font-size: 16px;
 }
 
 .container {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  max-width: 90%;
   height: 200px;
   width: 550px;
   background: linear-gradient(120deg, #f5e8c7, #f6b17a);
   border-radius: 10px;
-  box-shadow: 0px 8px 10px rgb(0, 0, 0, 0.5);
+  box-shadow: 0px 8px 10px rgba(0, 0, 0, 0.5);
 }
 
 .container div {
-  height: 170px;
   width: 150px;
+  height: 150px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   color: #fff;
-  background: rgb(5, 5, 5, 0.9);
+  background: rgba(5, 5, 5, 0.9);
   box-shadow: 5px 5px 15px rgba(0, 0, 0, 0.7);
   border-radius: 8px;
-  border: 7px;
   letter-spacing: 3px;
+}
+
+/* Media query for smaller screens */
+@media (max-width: 768px) {
+  .container {
+    max-width: 90%;
+    width: 325px;
+    height: 100px;
+    display: flex;
+    align-items: center;
+    justify-content: space-evenly;
+    padding: 5px 2px;
+  }
+
+  .container div {
+    width: 105px;
+    height: 90px;
+    margin: 10px;
+  }
 }
