--- a/styles.css
+++ b/styles.css
@@ -47,6 +47,10 @@ body {
   font-size: 60px;
 }
 
+.time-unit {
+  font-size: 20px;
+}
+
 /* Media query for smaller screens */
 @media (max-width: 768px) {
   .container {
@@ -67,5 +71,9 @@ body {
 
   .time-display {
     font-size: 30px;
+  }
+
+  .time-unit {
+    font-size: 10px;
   }
 }
